# MireaAppAndroid

./: AttendanceSystem.cpp  CMakeLists.txt  README.md
qml/: Attendance.qml  LoginPage.qml  Main.qml  Schedule.qml  SubjectPage.qml  Teachers.qml
qml/MyDir/: AttendanceLine.qml  ColorsNSizes.qml  File.qml  MyDrawer.qml  Subject.qml  qmldir
src/: JsonParser.cpp  JsonParser.h  LoginCall.cpp  LoginCall.h  Reseter.cpp  Reseter.hpp  Schedule.cpp  Schedule.hpp  Searcher.cpp  Searcher.h  ServerCall.cpp  ServerCall.h  SocketCall.cpp  SocketCall.h  SubjectSystem.cpp  SubjectSystem.hpp  main.cpp
src/data/: Cache.txt  Teachers.txt
